# task-board

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src/: app.js  index.html  manifest.webmanifest  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
